--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,16 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    implementation 'eu.chainfire:librootjava:1.0.0'
+    implementation 'eu.chainfire:librootjava:1.2.0'
+    implementation 'com.github.topjohnwu:libsu:2.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
