--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,9 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
     implementation 'eu.chainfire:librootjava:1.2.0'
     implementation 'com.github.topjohnwu:libsu:2.1.2'
     testImplementation 'junit:junit:4.12'
