--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'eu.chainfire:librootjava:1.2.0'
 
     def libsuVersion = '2.3.1'
