--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.preference:preference:1.1.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation 'eu.chainfire:librootjava:1.2.0'
 
